fixed the issue with profile picture not showing up

--- a/public/style.css
+++ b/public/style.css
@@ -109,7 +109,7 @@ form button {
     margin: 5px;
 }
 #navbar a{
-    width: 8%;
+    width: 140px;
     line-height: 1.2;
     padding: 15px 10px;
     margin-bottom: 15px;
